# rust_api_hub

./: Cargo.toml  ISSUE_FILTER_COMPLETED.md  README.md
src/: lib.rs  main.rs
src/handlers/: mod.rs  task_handler.rs
src/models/: mod.rs  repository.rs  task.rs
src/routes/: mod.rs  tasks.rs
src/tests/: integration_test.rs  mod.rs
src/utils/: logger.rs  mod.rs
tests/: bulk_delete_tests.rs  created_at_tests.rs  handler_tests.rs  handler_tests_count.rs  import_file_tests.rs  import_tests.rs  import_unified_tests.rs  logger_tests.rs  pagination_tests.rs  priority_tests.rs  repository_tests.rs  routes_tasks_tests.rs  stats_tests.rs  tags_tests.rs  task_tests.rs
