[package]
name = "rust_api_hub"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
env_logger = "0.11.8"
log = "0.4.28"
once_cell = "1.21.3"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
hyper = { version = "0.14", features = ["server", "tcp"] }
tower = { version = "0.4", features = ["util"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
